init commit and route configs

--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
   "name": "CRUD_Mobile_Login",
-  "displayName": "CRUD_Mobile_Login"
+  "version": "1.0.0",
+  "displayName": "CRUD_Mobile_Login",
+  "owner": "leoo1992"
 }
