--- a/package.json
+++ b/package.json
@@ -5,30 +5,47 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "react-native start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-community/masked-view": "*",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/elements": "^1.3.21",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "^0.73.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.73.19",
-    "@react-native/eslint-config": "0.73.2",
-    "@react-native/metro-config": "0.73.3",
-    "@react-native/typescript-config": "0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "@react-native/babel-preset": "^0.73.20",
+    "@react-native/metro-config": "^0.73.4",
+    "@react-native/typescript-config": "^0.74.0",
+    "@types/jest": "^29.5.11",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.73.0",
+    "typescript": "^5.1.3"
   },
   "engines": {
     "node": ">=18"
