--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,6 @@
 *.cc linguist-vendored
 *.cxx linguist-vendored
 *.m linguist-vendored
+*.mm linguist-vendored
+*.h linguist-vendored
+*.cs linguist-vendored
