--- a/.gitattributes
+++ b/.gitattributes
@@ -24,7 +24,24 @@
 *.h linguist-vendored
 *.cs linguist-vendored
 *.yaml linguist-vendored
+*.gem linguist-vendored
 *.gemfile linguist-vendored
 *.gemspec linguist-vendored
 *.lock linguist-vendored
 *.conf linguist-vendored
+*.maven linguist-vendored
+*.ico linguist-vendored
+*.prettirrc linguist-vendored
+*.gitignore linguist-vendored
+*.babelrc linguist-vendored
+*.pdf linguist-vendored
+*.cjs linguist-vendored
+*.env linguist-vendored
+*.cmd linguist-vendored
+*.jar linguist-vendored
+*.java linguist-vendored
+*.rdoc linguist-vendored
+*.log linguist-vendored
+*.pid linguist-vendored
+*.coffee linguist-vendored
+*.properties linguist-vendored
